results/smartbugs/Elysium/unchecked_low_level_calls/unchecked_return_value/unchecked_return_value.out
 ______     __         __  __     ______     __     __  __     __    __    
/\  ___\   /\ \       /\ \_\ \   /\  ___\   /\ \   /\ \/\ \   /\ "-./  \   
\ \  __\   \ \ \____  \ \____ \  \ \___  \  \ \ \  \ \ \_\ \  \ \ \-./\ \  
 \ \_____\  \ \_____\  \/\_____\  \/\_____\  \ \_\  \ \_____\  \ \_\ \ \_\ 
  \/_____/   \/_____/   \/_____/   \/_____/   \/_/   \/_____/   \/_/  \/_/ 
                                                                           
Compiling source code...
Error: Solidity compilation failed!
smartbugs/dataset/unchecked_low_level_calls/unchecked_return_value.sol:7:1: SyntaxError: Source file requires different compiler version (current compiler is 0.4.26+commit.4563c3fc.Linux.g++ - note that nightly builds are considered to be strictly less than the released version
pragma solidity 0.4.25;
^---------------------^

smartbugs/dataset/unchecked_low_level_calls/unchecked_return_value.sol:17:5: Warning: Return value of low-level calls not used.
    callee.call();
    ^-----------^

Error: The compilation did not produce any output!
Please check the source code!
